feat: Add products backend (#8)
