# backend/interface/database/entities/Product.ts
@@ -1,0 +1,8 @@
+export interface Product {
+  id: number;
+  name: string;
+  details: string;
+  price: number;
+  createdAt: Date;
+  updatedAt: Date;
+}
